--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/decanat/get-locale/issues"
   },
-  "homepage": "https://github.com/decanat/get-locale"
+  "homepage": "https://github.com/decanat/get-locale",
+  "devDependencies": {
+    "duo": "^0.9.2"
+  }
 }
