--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/decanat/get-locale",
   "devDependencies": {
-    "duo": "^0.9.2"
+    "duo": "^0.9.2",
+    "mocha": "^2.1.0"
   }
 }
