--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Detect client's language preference.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "make test"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,11 @@
     "duo": "^0.9.2",
     "mocha": "^2.1.0",
     "mocha-phantomjs": "^3.5.3"
+  },
+  "dependencies": {
+    "yiwn-extend": "^1.0.1",
+    "component-query": "0.0.3",
+    "component-type": "^1.1.0",
+    "component-cookie": "^1.1.1"
   }
 }
