--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "yiwn-extend": "^1.0.1",
     "component-query": "0.0.3",
     "component-type": "^1.1.0",
-    "component-cookie": "^1.1.1"
+    "component-cookie": "^1.1.1",
+    "jshint-stylish": "^1.0.0",
+    "jshint": "^2.6.0"
   }
 }
